pfish       2005/11/08 23:32:49 UTC	(20051108-3677)
  Log:
  Only use gen_pw when we need to to avoid leaking memory.
  

  Changes:	Modified:
  +2 -1		trunk/modules/nickserv/resetpass.c (File Modified) 
  +2 -1		trunk/modules/userserv/resetpass.c (File Modified) 


pfish       2005/11/08 22:54:00 UTC	(20051108-3675)
  Log:
  Fix a minor memory leak when a SRA resets a pass.
  

  Changes:	Modified:
  +1 -0		trunk/modules/nickserv/resetpass.c (File Modified) 
  +1 -0		trunk/modules/userserv/resetpass.c (File Modified) 


alambert    2005/11/08 18:19:46 UTC	(20051108-3673)
  Log:
  OS MODUNLOAD: fix grammar problem

  Changes:	Modified:
  +2 -2		trunk/modules/operserv/modunload.c (File Modified) 


alambert    2005/11/08 18:17:40 UTC	(20051108-3671)
  Log:
  OS MODLOAD: let the user know if the module was loaded or not

  Changes:	Modified:
  +7 -3		trunk/modules/operserv/modload.c (File Modified) 


alambert    2005/11/08 06:31:01 UTC	(20051108-3669)
  Log:
  XMLRPC: require login prior to atheme.account.verify -- stops information leaks. Now matches NickServ code.

  Changes:	Modified:
  +1 -1		trunk/contrib/xmlrpc_explorer.php (File Modified) 
  +15 -7	trunk/modules/xmlrpc/account.c (File Modified) 


alambert    2005/11/08 03:58:28 UTC	(20051108-3667)
  Log:
  crypto: Make it go to PREFIX/crypto, not PREFIX/backend

  Changes:	Modified:
  +3 -3		trunk/crypto/Makefile.in (File Modified) 


alambert    2005/11/08 03:09:32 UTC	(20051108-3665)
  Log:
  Rename verify_password() to crypt_verify_password()

  Changes:	Modified:
  +1 -1		trunk/include/crypto.h (File Modified) 
  +2 -2		trunk/src/crypto.c (File Modified) 


jilles      2005/11/08 02:10:26 UTC	(20051108-3663)
  Log:
  Another batch of chanserv command logging:
  close, clear users, clear bans, drop, ftransfer, flags
  

  Changes:	Modified:
  +2 -0		trunk/modules/chanserv/clear_bans.c (File Modified) 
  +2 -0		trunk/modules/chanserv/clear_users.c (File Modified) 